--- a/Dockerfile.erb
+++ b/Dockerfile.erb
@@ -70,9 +70,13 @@ RUN /install-extras.sh
 
 ENV CONF_DIRECTORY /etc/postgresql/$PG_VERSION
 ADD templates/etc/postgresql/PG_VERSION $CONF_DIRECTORY
+ADD templates/usr/bin /usr/bin
 
 ENV DATA_DIRECTORY /var/db
 RUN mkdir $DATA_DIRECTORY && chown -R postgres $DATA_DIRECTORY
+ENV ARCHIVE_DIRECTORY /var/archive
+RUN mkdir $ARCHIVE_DIRECTORY && chown -R postgres $ARCHIVE_DIRECTORY
+
 
 ADD bin/run-database.sh /usr/bin/
 ADD bin/utilities.sh /usr/bin/
@@ -82,6 +86,6 @@ ADD <%= ENV.fetch 'TAG' %>/test /tmp/test
 ADD test /tmp/test
 RUN bats /tmp/test
 
-VOLUME ["$DATA_DIRECTORY"]
+VOLUME ["$DATA_DIRECTORY", "$ARCHIVE_DIRECTORY"]
 EXPOSE 5432
 ENTRYPOINT ["/usr/bin/run-database.sh"]
