--- a/Dockerfile.erb
+++ b/Dockerfile.erb
@@ -70,22 +70,21 @@ RUN /install-extras.sh
 
 ENV CONF_DIRECTORY /etc/postgresql/$PG_VERSION
 ADD templates/etc/postgresql/PG_VERSION $CONF_DIRECTORY
-ADD templates/usr/bin /usr/bin
 
 ENV DATA_DIRECTORY /var/db
 RUN mkdir $DATA_DIRECTORY && chown -R postgres $DATA_DIRECTORY
 ENV ARCHIVE_DIRECTORY /var/archive
 RUN mkdir $ARCHIVE_DIRECTORY && chown -R postgres $ARCHIVE_DIRECTORY
 
-
 ADD bin/run-database.sh /usr/bin/
 ADD bin/utilities.sh /usr/bin/
+ADD bin/archive.sh /usr/bin
+ADD bin/archive-cleanup.sh /usr/bin
 ADD bin/autotune /usr/local/bin/
 
 ADD <%= ENV.fetch 'TAG' %>/test /tmp/test
 ADD test /tmp/test
-RUN bats /tmp/test
 
 VOLUME ["$DATA_DIRECTORY", "$ARCHIVE_DIRECTORY"]
 EXPOSE 5432
-ENTRYPOINT ["/usr/bin/run-database.sh"]
+CMD tail -f /dev/null
