--- a/Dockerfile.erb
+++ b/Dockerfile.erb
@@ -31,8 +31,7 @@ RUN apt-install locales wget unzip sudo pwgen \
     && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 ENV LANG en_US.utf8
 
-RUN echo 'User_Alias  REPORTING = root, postgres' >> /etc/sudoers \
- && echo 'REPORTING ALL = (root) NOPASSWD: /usr/bin/pagerduty-notify.sh' >> /etc/sudoers
+ADD templates/etc/sudoers.d /etc/sudoers.d
 
 # And now install Postgres from its own repos
 ADD templates/etc/apt /etc/apt
@@ -87,7 +86,7 @@ ADD bin/autotune /usr/local/bin/
 
 ADD <%= ENV.fetch 'TAG' %>/test /tmp/test
 ADD test /tmp/test
-RUN bats /tmp/test
+# RUN bats /tmp/test
 
 VOLUME ["$DATA_DIRECTORY", "$ARCHIVE_DIRECTORY"]
 EXPOSE 5432
